<resources>
    <string name="app_name">热点资讯</string>
    <string name="VideoView_error_text_unknown">对不起,这个视频不能播放。</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Sorry, this video is not valid for streaming to
		this device.</string>
    <string name="VideoView_error_button">OK</string>
    <string name="VideoView_error_title">Cannot play video</string>
    <string name="mediacontroller_play_pause">Play/Pause</string>
    <string name="video_layout_loading">正在缓冲...</string>
    <string name="init_decoders">正在进行第一次解压解码包...</string>
    <string name="update_cencal">(点击取消下载)</string>
    <string name="rf_co_des">%1$s客户端 V %2$s\n技术支持  慧度科技 99cms.cn</string>
    <string name="shared_img">shared_img</string>
    <string name="shared_appdownload">shared_appdownload</string>
    <string name="shared_site">shared_site</string>
    <string name="smsappkey">smsappkey</string>
    <string name="smsappsecret">smsappsecret</string>
    <string name="select_mode">选择模式</string>
    <string name="mode_single">单选</string>
    <string name="mode_multi">多选</string>
    <string name="max_select_amount">最大选择数量</string>
    <string name="hint_default_amount">默认数量为9</string>
    <string name="enable_camera">是否启用照相机</string>
    <string name="enable">是</string>
    <string name="disable">否</string>
    <string name="go_select">图片选择</string>
    <string name="folder_all">所有照片</string>
    <string name="preview">预览</string>
    <string name="msg_no_camera">没有系统相机</string>
    <string name="msg_amount_limit">已经达到最高选择数量</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="menu_news">新闻资讯</string>
    <string name="menu_album">图集</string>
    <string name="menu_video">视频点播</string>
    <string name="menu_subject">专题报道</string>
    <string name="menu_activity">活动</string>
    <string name="menu_search">搜索</string>
    <string name="about_us">	乐堂动漫信息技术有限公司成立于2009年3月，是一家致力于手机动漫、手机游戏、网页游戏、社交游戏、手机软件的研发、运营、销售为一体的高新技术动漫企业。
	公司现有员工400多人，90%以上为本科及以上学历，目前为安徽省最大的动漫游戏研发企业，自主知识产权的研发平台在全球处于领先地位，已于香港、南京、成都、广州建立子公司，并在北京、上海、深圳、台湾、美国、日本、韩国、新加坡、印尼设有分支机构。
	公司目前为国内动漫类游戏类厂商中的领导者，目前拥有《熊出没》 、《蜡笔小新》、《倒霉熊》、 《奥特曼》、《龙骑侠》、《铠甲勇士》、《大头儿子小头爸爸》、《果宝特攻》 、 《大话西游》等全球知名、经典IP，并已研发发行了多款成功成品。全球用户2014年累计突破5亿，多款动漫产品月流水千万人民币以上，其中《铠甲勇士之英雄传说》累计用户数已突破一亿，《熊出没之熊大快跑》累计用户数更是突破4亿大关，创下无数纪录；已成为动漫游戏行业领导者。
    </string>
    <string name="settings_font">字体设置</string>
    <string name="settings_option_font_large">大</string>
    <string name="settings_option_font_medium">中</string>
    <string name="settings_option_font_small">小</string>
    <string name="settings_push">推送开关</string>
    <string name="settings_weibo_bind">微博绑定</string>
    <string name="settings_clear_cache">清理缓存</string>
    <string name="settings_check_update">检查更新</string>
    <string name="settings_feedback">意见反馈</string>
    <string name="settings_about_us">关于我们</string>
    <string name="settings_spare_traffic">省流量模式</string>
    <string name="title_more_column">更多栏目</string>
    <string name="title_prompt">提示</string>
    <string name="title_user_register">用户注册</string>
    <string name="title_activity_personal_award">中奖个人信息</string>
    <string name="title_activity_vote_detail">投票选项详情</string>
    <string name="title_activity_register">活动报名</string>
    <string name="title_activity_vote">活动投票</string>
    <string name="title_activity_award">活动抽奖</string>
    <string name="title_activity_detail">活动详情</string>
    <string name="title_settings">设置</string>
    <string name="title_login">登陆</string>
    <string name="title_about_us">关于我们</string>
    <string name="login">登陆</string>
    <string name="prompt_no_network">请检查网络连接</string>
    <string name="prompt_images">%1$d张图</string>
    <string name="prompt_reports">%1$s篇报道</string>
    <string name="prompt_floors">%1$d楼</string>
    <string name="prompt_votes">%1$d票</string>
    <string name="prompt_comment_belong_post">原文:%1$s</string>
    <string name="prompt_column_subscribe">栏目订阅</string>
    <string name="prompt_my_msg">我的消息</string>
    <string name="prompt_no_msg">没有消息</string>
    <string name="prompt_my_favorite">我的收藏</string>
    <string name="prompt_no_favorite">没有收藏</string>
    <string name="prompt_relate_news">   相关新闻</string>
    <string name="prompt_clear_cache_dialog_title">确定清理缓存信息</string>
    <string name="prompt_clear_cache_dialog_msg">删除后图片信息可能需要重新请求</string>
    <string name="prompt_comment">评论</string>
    <string name="prompt_subject">专题</string>
    <string name="prompt_subject_in_vertical">专\n题</string>
    <string name="prompt_feedback">意见反馈</string>
    <string name="prompt_activity_period">时间：%1$s~%2$s</string>
    <string name="prompt_start_lottery">去抽奖</string>
    <string name="prompt_start_register">去注册</string>
    <string name="prompt_join_lottery">本次活动参与抽奖</string>
    <string name="prompt_name">姓	名：%1$s</string>
    <string name="prompt_brief_intro">简	介：				%1$s</string>
    <string name="prompt_search">搜素</string>
    <string name="prompt_seconds">%1$d秒</string>
    <string name="prompt_get_again">重新获取</string>
    <string name="prompt_find_password">密码找回</string>
    <string name="prompt_change_password">修改密码</string>
    <string name="prompt_change_nickname">修改昵称</string>
    <string name="prompt_change_sex">修改性别</string>
    <string name="prompt_choose_local_photo">选择本地图片</string>
    <string name="prompt_take_photo">拍照</string>
    <string name="prompt_male">男</string>
    <string name="prompt_female">女</string>
    <string name="prompt_keep_secret">保密</string>
    <string name="prompt_qq_user">QQ用户</string>
    <string name="prompt_weixin_user">微信用户</string>
    <string name="prompt_weibo_user">微博用户</string>
    <string name="prompt_register_user">注册用户</string>
    <string name="prompt_set_avatar">设置头像</string>
    <string name="prompt_developer_info">%1$s客户端\tv%2$s\n技术支持\t乐堂动漫</string>
    <string name="prompt_yesterday">昨天</string>
    <string name="prompt_today">今天</string>
    <string name="prompt_reopen_app">请确认您的网络是否连通，\n重新打开程序再试一次！</string>
    <string name="prompt_accept_award">前去领奖</string>
    <string name="prompt_real_name">真实姓名</string>
    <string name="prompt_phone_number">手机号码</string>
    <string name="prompt_submit">提   交</string>
    <string name="prompt_apply">报名</string>
    <string name="prompt_apply_on_cover">我要上封面</string>
    <string name="prompt_vote">投票</string>
    <string name="prompt_lottery">抽奖</string>
    <string name="prompt_share">分享</string>
    <string name="prompt_anonym">匿名网友</string>
    <string name="prompt_just_now">刚刚</string>
    <string name="prompt_why_cannot_comment">为什么不能评论！</string>
    <string name="prompt_reply">回复</string>
    <string name="prompt_auditing">审核中</string>
    <string name="prompt_long_press_to_adjust">长按上文调整，点击下文添加</string>
    <string name="prompt_click_to_add_or_cancel">直接点击即可添加和取消</string>
    <string name="prompt_get_captcha">获取验证码</string>
    <string name="prompt_verify_captcha">验    证</string>
    <string name="prompt_get">获   取</string>
    <string name="prompt_login">登    录</string>
    <string name="prompt_register_with_space">注      册</string>
    <string name="prompt_bind">绑    定</string>
    <string name="prompt_write_comment">写评论</string>
    <string name="prompt_image">图片</string>
    <string name="prompt_all_images">所有图片</string>
    <string name="prompt_image_plural">%1$d张</string>
    <string name="prompt_preview">预览(1)</string>
    <string name="prompt_complete">完成</string>
    <string name="prompt_complete_with_number">完成(%1$d/%2$d)</string>
    <string name="prompt_enter_now">立即进入</string>
    <string name="prompt_select_from_gallery">从相册中选取</string>
    <string name="prompt_forget_password">忘记密码</string>
    <string name="prompt_has_no_account">没有账号？</string>
    <string name="prompt_register">注册</string>
    <string name="prompt_nickname">昵称：</string>
    <string name="prompt_sex">性别：</string>
    <string name="prompt_i_has_comment">我评论了</string>
    <string name="prompt_font_big">大</string>
    <string name="prompt_font_medium">中</string>
    <string name="prompt_font_small">小</string>
    <string name="prompt_download_just_start">已下载0%</string>
    <string name="prompt_login_name">登录名</string>
    <string name="prompt_logout">退出登录</string>
    <string name="prompt_personal_info">个人信息</string>
    <string name="prompt_bind_other_platform">绑定其他平台</string>
    <string name="prompt_content_font">正文字号</string>
    <string name="prompt_vote_rule">投票规则</string>
    <string name="prompt_hot_comment">热门跟帖</string>
    <string name="prompt_sso_login">无需注册，用常用社交账户一键登录</string>
    <string name="prompt_send">发送</string>
    <string name="prompt_relevant">相关</string>
    <string name="prompt_login_now">立即登录</string>
    <string name="prompt_collect">收藏</string>
    <string name="prompt_push">推送</string>
    <string name="prompt_daytime">白天</string>
    <string name="prompt_qrcode">二维码</string>
    <string name="hint_account">账号</string>
    <string name="hint_input_new_nickname">请输入新的昵称...</string>
    <string name="hint_input_phone">请填写手机号</string>
    <string name="hint_msm_captcha">短信验证码</string>
    <string name="hint_phone_number">手机或座机</string>
    <string name="hint_sex">男或女</string>
    <string name="hint_date">如：2014-12-16</string>
    <string name="hint_award_send_address">奖品寄送地址</string>
    <string name="hint_please_input_password">请输入密码</string>
    <string name="hint_please_input_password_again">请再次输入密码...</string>
    <string name="hint_input_new_password">输入新密码</string>
    <string name="hint_confirm_password">确认新密码</string>
    <string name="hint_username_or_phone">用户名/手机号</string>
    <string name="hint_password">密码</string>
    <string name="hint_phone">手机号</string>
    <string name="hint_feedback_at_content">请留下您的意见或建议，我们将为您不断改进</string>
    <string name="hint_feedback_at_email">请留下您的邮箱以便我们给您回复</string>
    <string name="pull_to_refresh_pull_label">下拉刷新…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_reached_end">已到最后</string>
    <string name="activity_item_start_end_time">开始时间：%1$s\n结束时间：%2$s</string>
    <string name="comment_item_hot">热门评论</string>
    <string name="comment_item_new">最新评论</string>
    <string name="comment_check">查看评论</string>
    <string name="comment_mine">我的评论</string>
    <string name="comment_none">没有评论</string>
    <string name="toast_network_error">网络异常,请检查网络</string>
    <string name="toast_server_error">服务器错误</string>
    <string name="toast_server_no_response">服务器未响应</string>
    <string name="toast_cannot_connect_to_server">无法连接到服务器</string>
    <string name="toast_cannot_connect_network">网络连接失败</string>
    <string name="toast_check_network">请检查网络</string>
    <string name="toast_please_login">请登录</string>
    <string name="toast_collect_success">收藏成功</string>
    <string name="toast_collect_failed">收藏失败</string>
    <string name="toast_collect_cancelled">收藏已取消</string>
    <string name="toast_scan_content">扫描到的内容：%1$s</string>
    <string name="toast_scan_failed">扫描失败</string>
    <string name="toast_delete_success">删除成功</string>
    <string name="toast_delete_failed">删除失败</string>
    <string name="toast_no_sdcard">SD卡不存在</string>
    <string name="toast_image_format_is_wrong">图片格式不正确</string>
    <string name="toast_phone_format_is_wrong">电话格式不正确</string>
    <string name="toast_email_format_is_wrong">邮箱格式不正确</string>
    <string name="toast_date_format_is_wrong">日期格式不正确\n正确格式为yyyy-MM-dd</string>
    <string name="toast_qq_format_is_wrong">qq格式不正确</string>
    <string name="toast_downloaded_at">已下载到</string>
    <string name="toast_download_failed">下载失败</string>
    <string name="toast_request_failed">请求失败</string>
    <string name="toast_cache_invalidate">缓存失效，请重新打开</string>
    <string name="toast_no_update">没有更新</string>
    <string name="toast_update_only_in_wifi">没有wifi连接，只在wifi下更新</string>
    <string name="toast_timeout">超时</string>
    <string name="toast_bind_success">绑定成功</string>
</resources>