<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">

    <include layout="@layout/stitle_layout"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/setting_item_selector"
        android:padding="10dip">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:text="@string/settings_font"
            android:textColor="@color/zqzx_font_normal"
            android:textSize="20sp"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/zqzx_setting_rb1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/zq_textradiobtn_selector"
                android:text="@string/settings_option_font_large"
                android:textColor="@color/zqzx_font_normal"
                android:textSize="18sp"/>

            <RadioButton
                android:id="@+id/zqzx_setting_rb2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:button="@drawable/zq_textradiobtn_selector"
                android:text="@string/settings_option_font_medium"
                android:textColor="@color/zqzx_font_normal"
                android:textSize="18sp"/>

            <RadioButton
                android:id="@+id/zqzx_setting_rb3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/zq_textradiobtn_selector"
                android:text="@string/settings_option_font_small"
                android:textColor="@color/zqzx_font_normal"
                android:textSize="18sp"/>
        </RadioGroup>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/zqzx_bg_dark"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/setting_item_selector"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:gravity="center_vertical"
            android:text="@string/settings_push"
            android:textColor="@color/zqzx_font_normal"
            android:textSize="20sp"/>

        <com.hzpd.custorm.SlideSwitch
            android:id="@+id/zqzx_setting_push"
            xmlns:slideswitch="http://schemas.android.com/apk/res-auto"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            slideswitch:shape="circle"
            slideswitch:themeColor="@color/zqzx_green"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/zqzx_bg_dark"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/setting_item_selector"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:gravity="center_vertical"
            android:text="@string/settings_weibo_bind"
            android:textColor="@color/zqzx_font_normal"
            android:textSize="20sp"/>

        <com.hzpd.custorm.SlideSwitch
            android:id="@+id/zqzx_setting_weibo"
            xmlns:slideswitch="http://schemas.android.com/apk/res-auto"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            slideswitch:shape="circle"
            slideswitch:themeColor="@color/zqzx_green"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/zqzx_bg_dark"/>

    <RelativeLayout
        android:id="@+id/zqzx_setting_deletecache"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/setting_item_selector"
        android:clickable="true"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:gravity="center_vertical"
            android:text="@string/settings_clear_cache"
            android:textColor="@color/zqzx_font_normal"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/zqzx_setting_cache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:gravity="center_vertical"
            android:text="10m"
            android:textColor="@color/zqzx_font_normal"
            android:textSize="20sp"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/zqzx_bg_dark"/>

    <RelativeLayout
        android:id="@+id/zqzx_setting_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/setting_item_selector"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:gravity="center_vertical"
            android:text="@string/settings_check_update"
            android:textColor="@color/zqzx_font_normal"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/zqzx_setting_tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:gravity="center_vertical"
            android:text="1.0.0"
            android:textColor="@color/zqzx_font_normal"
            android:textSize="20sp"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/zqzx_bg_dark"/>

    <RelativeLayout
        android:id="@+id/zqzx_setting_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/setting_item_selector"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:gravity="center_vertical"
            android:text="@string/settings_feedback"
            android:textColor="@color/zqzx_font_normal"
            android:textSize="20sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/bbs_modle_jt"
            android:gravity="center_vertical"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/zqzx_bg_dark"/>

    <RelativeLayout
        android:id="@+id/zqzx_setting_aboutus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/setting_item_selector"
        android:padding="10dp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:gravity="center_vertical"
            android:text="@string/settings_about_us"
            android:textColor="@color/zqzx_font_normal"
            android:textSize="20sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/bbs_modle_jt"
            android:gravity="center_vertical"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/zqzx_bg_dark"/>

</LinearLayout>