<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:background="@color/transparent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="50dip"
        android:layout_height="150dip"
        android:background="@drawable/bg_kuozhanlan"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/news_textsize_big_id"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clickable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/prompt_font_big"
                android:textColor="@color/white"
                android:textSize="18sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/text_size_popu_center_root_id"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clickable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/prompt_font_medium"
                android:textColor="@color/white"
                android:textSize="18sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/text_size_popu_smail_root_id"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clickable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/prompt_font_small"
                android:textColor="@color/white"
                android:textSize="18sp"/>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>