<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:paddingLeft="40dp"
              android:paddingTop="5dp"
              android:paddingBottom="5dp"
              android:descendantFocusability="blocksDescendants"
              android:orientation="vertical">

    <LinearLayout
        android:id="@+id/check_comment2_ll_pop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/check_comment2_touxiang_iv"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/icon_comment_touxiang"/>

        <com.hzpd.ui.widget.FontTextView
            android:id="@+id/check_comment2_name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:textSize="15sp"
            android:textColor="@color/blue_title_bg"
            android:text="@string/prompt_anonym"/>

        <com.hzpd.ui.widget.FontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:textColor="@color/black"
            android:text="@string/prompt_reply"/>

        <com.hzpd.ui.widget.FontTextView
            android:id="@+id/check_comment2_name2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/blue_title_bg"
            android:text="@string/prompt_anonym"/>

        <com.hzpd.ui.widget.FontTextView
            android:id="@+id/check_comment2_time"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginRight="10dp"
            android:textColor="@color/grey_font"
            android:gravity="right"/>
    </LinearLayout>

    <com.hzpd.ui.widget.FontTextView
        android:id="@+id/check_comment2_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:text="@string/prompt_why_cannot_comment"/>


</LinearLayout>